# DataAlchemy

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/_base/: pretrain.yaml  sft.yaml
configs/pretrain/: format_generalization.yaml  length_generalization.yaml  task_generalization.yaml
configs/sft/: task_sft.yaml
docs/: MEDIA_COVERAGE.md
experiments/: format_generalization.sh  length_generalization.sh  task_generalization.sh  task_sft.sh
scripts/: apply_noise.py  compare_to_reference.py  evaluate_predictions.py  generate_data.py  model_inference.py  pretrain_model.py  sft_model.py
src/: __init__.py  atoms.py  constants.py  inference.py  models.py  transformations.py
src/data/: __init__.py  generator.py  mixer.py  noise.py  splits.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  scoring.py
src/training/: __init__.py  _shared.py  args.py  pretrain.py  sft.py
src/utils/: __init__.py  cli.py  config.py  logging.py  run_logging.py  seed.py
tests/: conftest.py  test_atoms.py  test_config.py  test_config_dataset_spec.py  test_constants.py  test_evaluator.py  test_generator.py  test_logging.py  test_metrics.py  test_mixer.py  test_models.py  test_noise.py  test_run_logging.py  test_scripts_cli.py  test_seed.py  test_splits.py  test_training_args.py  test_training_pretrain.py  test_training_sft.py  test_transformations.py
